k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auto-deploy
  labels:
    app: auto-deploy
